--- a/kasa/src/components/Card/card.scss
+++ b/kasa/src/components/Card/card.scss
@@ -1,5 +1,3 @@
-@import '../../sass/main.scss';
-
 .gallery_card{
     position: relative;
     width: 30%;
@@ -8,15 +6,7 @@
     cursor: pointer;
     overflow: hidden;
     transition : box-shadow 0.2s ease-in-out;
-    @media screen and (max-width: 1230px){
-        width: 47%;   
-    }
-    @media screen and (max-width: 900px){
-        width: 100%;    
-    }
-    @media screen and (max-width: 500px){
-        height: 200px;
-    }
+
     &::after{
         content: '';
         z-index: 10;
@@ -42,6 +32,7 @@
         will-change: transform;
     }
     h3{
+        font-family: 'Monstserrat', sans-serif;
         z-index: 20;
         position: absolute;
         bottom: 20px;
@@ -49,6 +40,6 @@
         right: 20px;
         font-weight: 500;
         font-size: clamp(12px, 3vw, 18px);
-        color: $color-primary;
+        color: #fff;
     }
 }
