--- a/kasa/src/components/Header/header.scss
+++ b/kasa/src/components/Header/header.scss
@@ -1,26 +1,35 @@
-@import '../../sass/main.scss';
 
 .nav_list{
+    font-family: 'Monstserrat', sans-serif;
     display: flex;
     gap: 50px;
-    color: $color-secondary;
+    color: #FF6060;
     font-size: clamp(12px, 2.5vw, 24px);
+    list-style-type: none;
     &_item{
         &_active{
             position: relative;
-            color: $color-secondary;
+            color: #FF6060;
             transition: all 0.2s ease-in-out;
-            text-decoration: underline solid $color-secondary; 
+            text-decoration: underline solid #FF6060; 
         }
+    }
+    a{
+        color: #FF6060;
+        text-decoration: none;
     }
 }
 
 header{
-    @include flex(row, space-between, center);
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
     height: 68px;
     max-width: 95%;
     margin: 0 auto;
     img{
-        height: 60%;
+        height: 68px;
+        width: 210px;
+        
     }
 }
