--- a/kasa/src/components/Footer/footer.scss
+++ b/kasa/src/components/Footer/footer.scss
@@ -1,12 +1,27 @@
-@import '../../sass/main.scss';
 
 .footer{
-    @include flex(column);
+    display: block;
+    padding-top: 30px;
     gap: 50px;
     width: 100%;
     height: 209px;
     background-color: #000;
     &_copyright{
-        color: $color-primary;
+        color: #fff;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        width: 14em;
+    }
+    div{
+     margin-top: auto;
+     margin-bottom: auto;   
+    }
+    img{
+        width: 122px;
+        height: 39px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
