--- a/kasa/src/components/Footer/footer.scss
+++ b/kasa/src/components/Footer/footer.scss
@@ -11,7 +11,8 @@
         margin-left: auto;
         margin-right: auto;
         display: block;
-        width: 14em;
+        width: 15em;
+        font-family: 'Monstserrat', sans-serif;   
     }
     div{
      margin-top: auto;
