--- a/kasa/src/components/Banner/banner.scss
+++ b/kasa/src/components/Banner/banner.scss
@@ -10,6 +10,11 @@
     height: 223px;
     max-width: 100%;
     margin: 50px auto;
+    @media screen and (max-width: 550px){
+        margin: 20px auto;
+        height: 120px;
+        max-width: 90%;
+    }
     p{
         color: #fff;
         font-size: clamp(20px, 4vw, 48px);
