--- a/kasa/src/components/Banner/banner.scss
+++ b/kasa/src/components/Banner/banner.scss
@@ -9,7 +9,7 @@
     background-size: cover;
     height: 223px;
     max-width: 100%;
-    margin: 50px auto;
+    margin: 50px 15px;
     @media screen and (max-width: 550px){
         margin: 20px auto;
         height: 120px;
