--- a/kasa/src/components/Collapse/collapse.scss
+++ b/kasa/src/components/Collapse/collapse.scss
@@ -7,8 +7,8 @@
     font-size: 24px;
     margin: 20px auto;
     @media screen and (max-width: 650px){
-        
         width: 90%;
+        margin: 12px auto;
         
     }
     
@@ -27,7 +27,7 @@
         cursor: pointer;
         @media screen and (max-width: 650px){
             font-size: 15px;
-            width: 90%;
+            width: 88%;
         }
 
     }
@@ -67,6 +67,10 @@
 
 .fleche{
     transition: all 0.2s ease-in-out;
+    float: right;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding-left: 20px;
 }
 .fleche_haut{
     transform: rotate(0deg);
