--- a/kasa/src/components/Gallery/gallery.scss
+++ b/kasa/src/components/Gallery/gallery.scss
@@ -5,8 +5,8 @@
     background-color: #F7F7F7;
     padding: 50px;
     border-radius: 25px;
-    width: 93%;
-    margin: 0 auto;
+    width: 90%;
+    margin: 0 13px;
     @media screen and (max-width: 1230px){
         gap: 25px; 
         padding:25px 0px;
