--- a/kasa/src/components/Infos/infos.scss
+++ b/kasa/src/components/Infos/infos.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: row;
     margin: 0% 0;
-
     padding: 0;
     align-items: center;
     justify-content: space-between; 
@@ -81,8 +80,6 @@
     padding: 0;
     @media screen and (max-width: 650px){
         flex-direction: column;
-        gap: 20px;
-        margin: 20px auto;
     }
 
 }
@@ -130,7 +127,7 @@
     @media screen and (max-width: 650px){
         margin-right: auto;
         width: 21em;
-        padding: 25px;}
+        padding-left: 25px;}
 }
 
 
