--- a/kasa/src/components/Carousel/carousel.scss
+++ b/kasa/src/components/Carousel/carousel.scss
@@ -73,6 +73,9 @@
       left: 48%;
       line-height: 26px;
       position: absolute;
+      @media screen and (max-width: 650px){
+        display: none;
+      }
     }
     
   }
